--- a/css/style.css
+++ b/css/style.css
@@ -125,11 +125,11 @@ h6 {
 }
 
 .past-mark {
-  background-color: #C6A59A;
+  background-color: #EAC4BD;
 }
 
 .future-mark {
-  background-color: #9AABC6;
+  background-color: #DABDEA;
 }
 
 .additional-padding {
