--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Roboto:regular,500,700&display=swap);
 @charset "UTF-8";
 * {
   padding: 0px;
@@ -125,23 +125,36 @@ h6 {
 }
 
 .past-mark {
-  background-color: #EAC4BD;
-}
-
-.stretching {
-  grid-row-start: span 2;
+  background-color: #eac4bd;
 }
 
 .future-mark {
-  background-color: #DABDEA;
+  background-color: #dabdea;
 }
 
-.additional-padding {
-  padding-left: calc(2.1875rem + -15 * (100vw - 20rem) / 850) !important;
+@media (max-width: 66.875em) {
+  .additional-padding {
+    padding-left: calc(2.1875rem + -15 * (100vw - 20rem) / 850) !important;
+  }
+}
+
+.hide-mark {
+  opacity: 0;
+  visibility: hidden;
+}
+@media (max-width: 37.5em) {
+  .hide-mark {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .colom-3 {
   grid-template: 1fr 1fr/1fr 1fr 1fr !important;
+}
+
+.grid-2-4 {
+  grid-template: 1fr 1fr/1fr 1fr 1fr 1fr !important;
 }
 
 .colom-1 {
@@ -150,6 +163,22 @@ h6 {
 
 .colom-1-3 {
   grid-template: 1fr/1fr 1fr 1fr !important;
+}
+
+.grid-3-3 {
+  grid-template: 1fr 1fr 1fr/1fr 1fr 1fr !important;
+}
+
+.grid-1-4 {
+  grid-template: 1fr/1fr 1fr 1fr 1fr !important;
+}
+
+.stretching-3 {
+  grid-row-start: span 3;
+}
+
+.stretching {
+  grid-row-start: span 2;
 }
 
 [class*=-ibg] {
@@ -239,9 +268,11 @@ h6 {
   display: grid;
   grid-template: 1fr 1fr/1fr 1fr;
   gap: 30px;
+  margin-top: 25vh;
 }
 @media (max-width: 29.99875em) {
   .tenses__container {
+    margin-top: auto;
     grid-template: 1fr/1fr;
     gap: 15px;
   }
@@ -281,53 +312,65 @@ h6 {
   }
 }
 
-.simple-time__container {
+.tense-time__container {
   display: grid;
   grid-template: auto auto auto/1fr 1fr 1fr;
   row-gap: 0.9375rem;
   align-items: start;
 }
 @media (min-width: 75em) {
-  .simple-time__container {
+  .tense-time__container {
     column-gap: 1.875rem;
   }
 }
 @media (min-width: 20em) and (max-width: 75em) {
-  .simple-time__container {
+  .tense-time__container {
     column-gap: clamp( 0.9375rem , 0.5965909091rem  +  1.7045454545vw , 1.875rem );
   }
 }
 @media (max-width: 20em) {
-  .simple-time__container {
+  .tense-time__container {
     column-gap: 0.9375rem;
   }
 }
-.marks__container {
-  display: grid;
-  grid-template: 1fr/1fr 1fr 1fr;
-}
-@media (min-width: 75em) {
-  .marks__container {
-    column-gap: 1.875rem;
+@media (max-width: 37.5em) {
+  .tense-time__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
-@media (min-width: 20em) and (max-width: 75em) {
-  .marks__container {
-    column-gap: clamp( 0.9375rem , 0.5965909091rem  +  1.7045454545vw , 1.875rem );
+
+@media (min-width: 37.5625em) {
+  .spollers__item {
+    display: flex;
+    align-items: center;
   }
 }
-@media (max-width: 20em) {
-  .marks__container {
-    column-gap: 0.9375rem;
+@media (max-width: 37.5em) {
+  .spollers__item {
+    width: 100%;
+    height: 25%;
+    background-color: #eee;
+  }
+  .spollers__item:nth-child(n) .grid__tense:not(:last-child) {
+    margin-bottom: 15px;
   }
 }
 .marks__say {
+  margin: auto;
   text-align: center;
   font-weight: 500;
   justify-content: center;
   align-items: center;
   font-size: 3rem;
-  margin-bottom: 5px;
+}
+@media (max-width: 37.5em) {
+  .marks__say {
+    width: 100%;
+    height: 25%;
+  }
 }
 
 .grid__tense {
@@ -346,6 +389,21 @@ h6 {
   }
 }
 @media (max-width: 20em) {
+  .grid__tense {
+    font-size: 1.125rem;
+  }
+}
+@media (max-width: 37.5em) and (min-width: 75em) {
+  .grid__tense {
+    font-size: 2.8125rem;
+  }
+}
+@media (max-width: 37.5em) and (min-width: 20em) and (max-width: 75em) {
+  .grid__tense {
+    font-size: clamp( 1.125rem , 0.5113636364rem  +  3.0681818182vw , 2.8125rem );
+  }
+}
+@media (max-width: 37.5em) and (max-width: 20em) {
   .grid__tense {
     font-size: 1.125rem;
   }
