--- a/css/style.css
+++ b/css/style.css
@@ -188,44 +188,49 @@ h6 {
 }
 .reduction__table th,
 .reduction__table td {
-  padding: 16px 20px;
-  border: 1px solid #c8c8c8;
-  background-color: trnasparent;
-  font-weight: 400;
+  min-width: 100%;
+  padding: 16px 5px;
   text-align: center;
 }
 
-.verbs tbody tr:nth-child(even) {
-  background-color: #f8f7f7;
+tr {
+  box-shadow: 0 1px rgba(0, 0, 0, 0.07);
 }
+
+.hide {
+  display: none;
+}
+
 .verbs th,
 .verbs td {
-  padding: 16px 20px;
-  background-color: trnasparent;
+  padding: 16px 5px;
+  background-color: transparent;
   font-weight: 400;
   text-align: center;
+  margin: -2px;
 }
 .verbs table {
+  line-height: 1.2222222222;
+  width: 60vh;
   margin: auto;
-}
-@media (min-width: 75em) {
-  .verbs table {
-    width: 56.25rem;
-  }
-}
-@media (min-width: 20em) and (max-width: 75em) {
-  .verbs table {
-    width: clamp( 20rem , 6.8181818182rem  +  65.9090909091vw , 56.25rem );
-  }
-}
-@media (max-width: 20em) {
-  .verbs table {
-    width: 20rem;
-  }
 }
 .verbs thead {
   background-color: #3b528b;
   color: #fff;
+}
+
+.input__search {
+  height: 40px;
+  width: 60vh;
+  margin: auto;
+}
+.input__search input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  padding: 0px 15px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 [class*=-ibg] {
