--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@
   box-sizing: border-box;
 }
 
+html {
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+}
+
 html,
 body {
   height: 100%;
