--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,6 @@ body::after {
 .header__container {
   position: relative;
   display: flex;
-  background-color: #CEDCFF;
   border-radius: 0px 0px 5px 5px;
   align-items: center;
   height: 40px;
@@ -424,7 +423,7 @@ body::after {
     right: 0;
     flex-direction: column;
     padding: 60px 30px;
-    background: #e6eef4;
+    background: #fff;
     font-weight: 500;
   }
 
