--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,10 @@
 // Заголовки, общие БЄМ блоки и проче...
+.green {
+	color: var(--green);
+}
+.red {
+	color: var(--red);
+}
+.blue {
+	color: var(--blue);
+}
