--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,12 @@
 //====================================================================================================
-
+.header__container {
+	position: relative;
+	display: flex;
+	border-radius: 0px 0px 5px 5px;
+	align-items: center;
+	height: 50px;
+	justify-content: end;
+}
 //====================================================================================================
 
 //Burger
