--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,9 @@
-@use "sass:math";
+@use 'sass:math';
 
 // Подключение миксинов ===========================================================================================================================================================================================================================================================================
-@import "base/mixins";
-@import url(https://fonts.googleapis.com/css?family=Roboto:regular,500,700&display=swap);
+@import 'base/mixins';
+// @import url(https://fonts.googleapis.com/css?family=Open+Sans:regular,500,700&display=swap);
+
 // Подключение шрифтов ===========================================================================================================================================================================================================================================================================
 //&display=swap - добавить при подключении через плагин
 
@@ -12,13 +13,11 @@
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
 //@import "fonts/icons";
+@import 'fonts/Segoe_UI/Segoe_UI.css';
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: "Roboto";
+$fontFamily: 'Segoe UI';
 $fontSize: rem(18); // где 14(px) - размер шрифта по умолчанию из макета
-
-// Основные цвета
-$mainColor: #000; // Цвет шрифта по умолчанию
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 // Минимальная ширина страницы
@@ -35,7 +34,9 @@ $containerPadding: 30;
 $containerWidth: $maxWidthContainer + $containerPadding;
 
 // Брейк-поинты
-$pc: em($containerWidth); // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
+$pc: em(
+	$containerWidth
+); // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
 $tablet: em(991.98); // Планшеты, некоторые телефоны в горизонтальном положении
 $mobile: em(767.98); // Телефоны L
 $mobileSmall: em(479.98); // Телефоны S
@@ -45,10 +46,13 @@ $mobileSmall: em(479.98); // Телефоны S
 // 2 = по брейк-поинтам (контейнер меняет свою ширину по брейк-поинтам)
 $responsiveType: 1;
 
+@import './base/theme.scss';
+
 // Обнуление и общие параметры ============================================================================================================================================================================================== =============================================================================================== ===============================================================================================
-@import "base/null";
-@import "base/legacy";
+@import 'base/null';
+@import 'base/legacy';
 body {
+	background-color: var(--background);
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
@@ -83,7 +87,7 @@ body {
 */
 @if ($responsiveType==1) {
 	// Отзывчивая
-	[class*="__container"] {
+	[class*='__container'] {
 		@if ($maxWidthContainer>0) {
 			max-width: rem($maxWidthContainer);
 			box-sizing: content-box;
@@ -95,7 +99,7 @@ body {
 	}
 } @else {
 	// По брейк-поинтам
-	[class*="__container"] {
+	[class*='__container'] {
 		margin: 0 auto;
 		@if ($maxWidthContainer>0) {
 			max-width: rem($maxWidthContainer);
@@ -122,14 +126,14 @@ body {
 
 // Подключение базовых стилей, шаблонов (заготовок) и вспомогательных  классов
 // Для подключения/отключения конкретных стилей смотри base.scss
-@import "base";
+@import 'base';
 
 // Подключение стилей общих элементов проекта
-@import "common";
+@import 'common';
 
 // Подключение стилей отдельных блоков
-@import "header";
-@import "footer";
+@import 'header';
+@import 'footer';
 
 // Подключение стилей отдельных страниц
-@import "home";
+@import 'home';
