--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,262 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:regular,500,700&display=swap);
+@font-face {
+    font-family: 'Segoe UI';
+    src: url(/1f38a762d1c3b24a3729.eot);
+    src: local('Segoe UI Bold Italic'), local('SegoeUI-BoldItalic'),
+        url(/1f38a762d1c3b24a3729.eot?#iefix) format('embedded-opentype'),
+        url(/cf4ff2702872de25c047.woff2) format('woff2'),
+        url(/f4ced5252d8781ead35b.woff) format('woff'),
+        url(/b37f4f29c37ccfc896f2.ttf) format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Segoe UI';
+    src: url(/ce86fe389c280aacdee3.eot);
+    src: local('Segoe UI'), local('SegoeUI'),
+        url(/ce86fe389c280aacdee3.eot?#iefix) format('embedded-opentype'),
+        url(/a8b8657ebede05f16bae.woff2) format('woff2'),
+        url(/f9d072ec3d5c7d9956d2.woff) format('woff'),
+        url(/ef1c00b65a5fd5bae3bb.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Segoe UI';
+    src: url(/4ec878e45487e3a86fbd.eot);
+    src: local('Segoe UI Semibold'), local('SegoeUI-SemiBold'),
+        url(/4ec878e45487e3a86fbd.eot?#iefix) format('embedded-opentype'),
+        url(/aaed3f515c66146622e7.woff2) format('woff2'),
+        url(/abaaa98155d53c0b454c.woff) format('woff'),
+        url(/d3ebb785eab2e77c2144.ttf) format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Segoe UI';
+    src: url(/bdc80ae65e4c86cc203d.eot);
+    src: local('Segoe UI Light'), local('SegoeUI-Light'),
+        url(/bdc80ae65e4c86cc203d.eot?#iefix) format('embedded-opentype'),
+        url(/b115cb2cc7620e972661.woff2) format('woff2'),
+        url(/6025459259e49a5b53de.woff) format('woff'),
+        url(/a4cb537856834f0a73b1.ttf) format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Segoe UI';
+    src: url(/e95d9f2db99a452b6d5e.eot);
+    src: local('Segoe UI Bold'), local('SegoeUI-Bold'),
+        url(/e95d9f2db99a452b6d5e.eot?#iefix) format('embedded-opentype'),
+        url(/c896e4afc36ba3635b3a.woff2) format('woff2'),
+        url(/396319bfefa14eeb05a3.woff) format('woff'),
+        url(/62f56c089745418bb373.ttf) format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Segoe UI';
+    src: url(/c018b630c4b158327288.eot);
+    src: local('Segoe UI Italic'), local('SegoeUI-Italic'),
+        url(/c018b630c4b158327288.eot?#iefix) format('embedded-opentype'),
+        url(/d30e47d2c1211bd26f2c.woff2) format('woff2'),
+        url(/53caad45986c555ccee5.woff) format('woff'),
+        url(/cf4e19a73b8512765a43.ttf) format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+
 @charset "UTF-8";
+:root {
+  --textBlack: #050505;
+  --textWhite: #f7f8f2;
+  --greenBlack: #8ac926;
+  --redBlack: #ff595e;
+  --blueBlack: #1982c4;
+  --green: #8ac926;
+  --red: #ff595e;
+  --blue: #1982c4;
+  --mediumBlue: #085db4;
+  --gray: #e9e9e9;
+  --background: #fcfcfc;
+  --backgroundContent: #ffffff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --textBlack: #fff;
+    --textWhite: #f7f8f2;
+    --greenBlack: #8ac926;
+    --redBlack: #ff595e;
+    --blueBlack: #1982c4;
+    --green: #8ac926;
+    --red: #ff595e;
+    --blue: #1982c4;
+    --mediumBlue: #085db4;
+    --gray: #181a1b;
+    --background: #1e2021;
+    --backgroundContent: #181a1b;
+  }
+}
+.dark-theme {
+  --textBlack: #fff;
+  --textWhite: #f7f8f2;
+  --greenBlack: #8ac926;
+  --redBlack: #ff595e;
+  --blueBlack: #1982c4;
+  --green: #8ac926;
+  --red: #ff595e;
+  --blue: #1982c4;
+  --mediumBlue: #085db4;
+  --gray: #181a1b;
+  --background: #1e2021;
+  --backgroundContent: #181a1b;
+}
+
+.light-theme {
+  --textBlack: #050505;
+  --textWhite: #f7f8f2;
+  --greenBlack: #8ac926;
+  --redBlack: #ff595e;
+  --blueBlack: #1982c4;
+  --green: #8ac926;
+  --red: #ff595e;
+  --blue: #1982c4;
+  --mediumBlue: #085db4;
+  --gray: #e9e9e9;
+  --background: #fcfcfc;
+  --backgroundContent: #ffffff;
+}
+
+#theme-toggle {
+  cursor: pointer;
+  background: 0;
+  border: 0;
+  opacity: 0.8;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  position: relative;
+  isolation: isolate;
+}
+
+#theme-toggle svg {
+  fill: var(--clr-foreground);
+  height: 45px;
+  width: 45px;
+}
+
+#theme-toggle::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: hsla(0deg, 0%, 50%, 0.2);
+  border-radius: inherit;
+  transform: scale(0);
+  opacity: 0;
+  z-index: -1;
+}
+
+.light-theme #theme-toggle::before {
+  animation: pulseToLight 650ms ease-out;
+}
+
+.dark-theme #theme-toggle::before {
+  animation: pulseToDark 650ms ease-out;
+}
+
+#theme-toggle::after {
+  content: attr(aria-label);
+  position: absolute;
+  color: var(--clr-background);
+  background: var(--clr-foreground);
+  width: max-content;
+  font-size: 1.3rem;
+  right: 0;
+  top: 95%;
+  margin: 0 auto;
+  padding: 0.5em 1em;
+  border-radius: 0.125em;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top;
+  transition: transform 0ms linear 100ms, opacity 100ms linear;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+@media (max-width: 61.99875em) {
+  #theme-toggle::after {
+    right: -96px;
+  }
+}
+#theme-toggle:hover,
+#theme-toggle:focus {
+  outline: 0;
+  opacity: 1;
+  background: hsla(0deg, 0%, 50%, 0.15);
+}
+
+#theme-toggle:hover::after,
+#theme-toggle:focus-visible::after {
+  opacity: 0.7;
+  transform: scale(1);
+  transition: transform 70ms linear, opacity 70ms linear;
+}
+
+.toggle-circle {
+  transition: transform 500ms ease-out;
+}
+
+.light-theme .toggle-circle {
+  transform: translateX(-15%);
+}
+
+.toggle-sun {
+  transform-origin: center center;
+  transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
+}
+
+.light-theme .toggle-sun {
+  transform: rotate(0.5turn);
+}
+
+@keyframes pulseToLight {
+  0% {
+    transform: scale(0);
+    opacity: 0.5;
+  }
+  10% {
+    transform: scale(1);
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1);
+  }
+}
+@keyframes pulseToDark {
+  0% {
+    transform: scale(0);
+    opacity: 0.5;
+  }
+  10% {
+    transform: scale(1);
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1);
+  }
+}
 * {
   padding: 0px;
   margin: 0px;
@@ -24,9 +281,9 @@ body {
 }
 
 body {
-  color: #000;
+  color: var(--textBlack);
   line-height: 1;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
   font-size: 1.125rem;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -38,7 +295,7 @@ body {
 input,
 button,
 textarea {
-  font-family: "Roboto";
+  font-family: "Segoe UI";
   font-size: inherit;
 }
 
@@ -158,15 +415,15 @@ h6 {
 }
 
 .statement {
-  border: 2px solid rgba(60, 173, 132, 0.25);
+  border: 2px solid var(--greenBlack);
 }
 
 .denial {
-  border: 2px solid rgba(176, 69, 69, 0.25);
+  border: 2px solid var(--redBlack);
 }
 
 .question {
-  border: 2px solid rgba(49, 60, 156, 0.25);
+  border: 2px solid var(--blueBlack);
 }
 
 .padding-top {
@@ -174,15 +431,15 @@ h6 {
 }
 
 .present-mark {
-  background-color: #bdeacf;
+  background-color: var(--green);
 }
 
 .past-mark {
-  background-color: #eac4bd;
+  background-color: var(--red);
 }
 
 .future-mark {
-  background-color: #dabdea;
+  background-color: var(--blue);
 }
 
 @media (max-width: 66.875em) {
@@ -259,8 +516,13 @@ h6 {
   text-align: center;
 }
 
-tr {
+tbody tr:nth-child(even) {
   box-shadow: 0 1px rgba(0, 0, 0, 0.07);
+  background-color: var(--gray);
+}
+
+table {
+  border-collapse: collapse;
 }
 
 .hide {
@@ -314,9 +576,17 @@ tr {
   }
 }
 
+thead tr th:nth-child(1) {
+  border-radius: 5px 0 0 5px;
+}
+
+thead tr th:nth-child(3) {
+  border-radius: 0 5px 5px 0;
+}
+
 .verbs thead {
-  background-color: #3b528b;
-  color: #fff;
+  background-color: var(--mediumBlue);
+  color: var(--textWhite);
 }
 
 .input__search {
@@ -337,7 +607,8 @@ tr {
   outline: none;
   padding: 0px 15px;
   border-radius: 3px;
-  background-color: #efeff0;
+  background-color: var(--gray);
+  font-family: "Segoe UI";
 }
 
 body::after {
@@ -371,15 +642,6 @@ body::after {
   object-fit: contain;
 }
 
-.header__container {
-  position: relative;
-  display: flex;
-  border-radius: 0px 0px 5px 5px;
-  align-items: center;
-  height: 40px;
-  justify-content: end;
-}
-
 .menu__body {
   display: flex;
   justify-content: center;
@@ -389,8 +651,8 @@ body::after {
 .menu__list {
   display: flex;
   align-items: center;
+  height: 22px;
   text-align: center;
-  overflow: auto;
 }
 
 @media (max-width: 61.99875em) {
@@ -406,11 +668,6 @@ body::after {
   width: 25px;
 }
 
-.info__button {
-  width: 40px;
-  height: 40px;
-}
-
 @media (max-width: 61.99875em) {
   .menu-open .menu__list {
     display: flex;
@@ -423,16 +680,14 @@ body::after {
     right: 0;
     flex-direction: column;
     padding: 60px 30px;
-    background: #fff;
+    background: var(--background);
     font-weight: 500;
   }
-
   .menu-open .menu__list .menu__item {
     font-size: 1.375rem;
     display: block;
     margin: auto;
   }
-
   .menu-open .menu__list .menu__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -455,7 +710,6 @@ body::after {
     cursor: pointer;
     z-index: 15;
   }
-
   .icon-menu span,
 .icon-menu::before,
 .icon-menu::after {
@@ -465,30 +719,24 @@ body::after {
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #000;
+    background-color: var(--textBlack);
   }
-
   .icon-menu::before {
     top: 0px;
   }
-
   .icon-menu::after {
     bottom: 0px;
   }
-
   .icon-menu span {
     top: calc(50% - 1px);
   }
-
   .menu-open .icon-menu span {
     transform: scale(0);
   }
-
   .menu-open .icon-menu::before {
     transform: rotate(-45deg);
     top: calc(50% - 1px);
   }
-
   .menu-open .icon-menu::after {
     transform: rotate(45deg);
     bottom: calc(50% - 1px);
@@ -511,14 +759,14 @@ body::after {
   }
 }
 .tenses__box {
-  color: #fff;
+  color: var(--textBlack);
   display: flex;
   max-height: 15rem;
   padding: 6.25rem 0.9375rem;
   justify-content: center;
   align-items: center;
   border-radius: 0.3125rem;
-  background-color: #3b528b;
+  background-color: var(--backgroundContent);
 }
 
 @media (max-width: 29.99875em) {
@@ -572,6 +820,9 @@ body::after {
   grid-template: auto auto auto/1fr 1fr 1fr;
   row-gap: 0.9375rem;
   align-items: start;
+  background-color: var(--backgroundContent);
+  padding-bottom: 15px !important;
+  border-radius: 15px;
 }
 
 @media (min-width: 75em) {
@@ -608,7 +859,6 @@ body::after {
     width: 100%;
     height: 25%;
   }
-
   .spollers__item:nth-child(n) .grid__tense:not(:last-child) {
     margin-bottom: 15px;
   }
@@ -621,14 +871,19 @@ body::after {
   align-items: center;
   font-size: 3rem;
   cursor: default;
+  font-family: "Segoe UI";
 }
 
 @media (max-width: 47.9375em) {
   .marks__say {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    background-color: #eee;
+    background-color: var(--gray);
     height: 60px;
     cursor: pointer;
+    border-radius: 8px;
   }
 }
 .grid__tense {
@@ -763,6 +1018,9 @@ body::after {
   .grid__verb {
     font-size: 1.5rem;
   }
+}
+body {
+  background-color: var(--background);
 }
 .lock body {
   overflow: hidden;
@@ -1101,6 +1359,27 @@ body.popup-show::after {
 
 .page-passive .grid__tense {
   padding: 10px 15px;
+}
+
+.green {
+  color: var(--green);
+}
+
+.red {
+  color: var(--red);
+}
+
+.blue {
+  color: var(--blue);
+}
+
+.header__container {
+  position: relative;
+  display: flex;
+  border-radius: 0px 0px 5px 5px;
+  align-items: center;
+  height: 50px;
+  justify-content: end;
 }
 
 /*
