--- a/src/scss/base/theme.scss
+++ b/src/scss/base/theme.scss
@@ -1,7 +1,7 @@
 // Основные цвета
 :root {
 	--textBlack: #050505; // Цвет шрифта по умолчанию
-	--textWhite: #f7f8f2;
+	--textWhite: #f2f5f8;
 	--greenBlack: #8ac926;
 	--redBlack: #ff595e;
 	--blueBlack: #1982c4;
@@ -10,7 +10,7 @@
 	--blue: #1982c4;
 	--mediumBlue: #085db4;
 	--gray: #e9e9e9;
-	--background: #fcfcfc;
+	--background: #edeef0;
 	--backgroundContent: #ffffff;
 }
 
@@ -48,7 +48,7 @@
 }
 .light-theme {
 	--textBlack: #050505; // Цвет шрифта по умолчанию
-	--textWhite: #f7f8f2;
+	--textWhite: #f2f5f8;
 	--greenBlack: #8ac926;
 	--redBlack: #ff595e;
 	--blueBlack: #1982c4;
@@ -57,7 +57,7 @@
 	--blue: #1982c4;
 	--mediumBlue: #085db4;
 	--gray: #e9e9e9;
-	--background: #fcfcfc;
+	--background: #edeef0;
 	--backgroundContent: #ffffff;
 }
 
