--- a/src/app.css
+++ b/src/app.css
@@ -44,6 +44,228 @@
 	--backgroundContent: #ffffff;
 }
 
+#theme-toggle {
+	cursor: pointer;
+	background: 0;
+	border: 0;
+	opacity: 0.8;
+	height: 45px;
+	width: 45px;
+	border-radius: 50%;
+	position: relative;
+	isolation: isolate;
+}
+
+#theme-toggle svg {
+	fill: var(--clr-foreground);
+	height: 45px;
+	width: 45px;
+}
+
+#theme-toggle::before {
+	content: '';
+	position: absolute;
+	inset: 0;
+	background: hsla(0deg, 0%, 50%, 0.2);
+	border-radius: inherit;
+	-webkit-transform: scale(0);
+	-ms-transform: scale(0);
+	transform: scale(0);
+	opacity: 0;
+	z-index: -1;
+}
+.css-1cr8pgt-MuiPaper-root-MuiAccordion-root.Mui-expanded {
+	margin: none !important;
+}
+.Mui-expanded {
+	margin: none;
+}
+.light-theme #theme-toggle::before {
+	-webkit-animation: pulseToLight 650ms ease-out;
+	animation: pulseToLight 650ms ease-out;
+}
+
+.dark-theme #theme-toggle::before {
+	-webkit-animation: pulseToDark 650ms ease-out;
+	animation: pulseToDark 650ms ease-out;
+}
+
+#theme-toggle::after {
+	content: attr(aria-label);
+	position: absolute;
+	color: var(--clr-background);
+	background: var(--clr-foreground);
+	width: -webkit-max-content;
+	width: -moz-max-content;
+	width: max-content;
+	font-size: 1.3rem;
+	right: 0;
+	top: 95%;
+	margin: 0 auto;
+	padding: 0.5em 1em;
+	border-radius: 0.125em;
+	opacity: 0;
+	-webkit-transform: scale(0);
+	-ms-transform: scale(0);
+	transform: scale(0);
+	-webkit-transform-origin: top;
+	-ms-transform-origin: top;
+	transform-origin: top;
+	-webkit-transition: opacity 100ms linear, -webkit-transform 0ms linear 100ms;
+	transition: opacity 100ms linear, -webkit-transform 0ms linear 100ms;
+	-o-transition: transform 0ms linear 100ms, opacity 100ms linear;
+	transition: transform 0ms linear 100ms, opacity 100ms linear;
+	transition: transform 0ms linear 100ms, opacity 100ms linear,
+		-webkit-transform 0ms linear 100ms;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#theme-toggle:hover,
+#theme-toggle:focus {
+	outline: 0;
+	opacity: 1;
+	background: hsla(0deg, 0%, 50%, 0.15);
+}
+
+#theme-toggle:hover::after,
+#theme-toggle:focus-visible::after {
+	opacity: 0.7;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: opacity 70ms linear, -webkit-transform 70ms linear;
+	transition: opacity 70ms linear, -webkit-transform 70ms linear;
+	-o-transition: transform 70ms linear, opacity 70ms linear;
+	transition: transform 70ms linear, opacity 70ms linear;
+	transition: transform 70ms linear, opacity 70ms linear,
+		-webkit-transform 70ms linear;
+}
+
+.toggle-circle {
+	-webkit-transition: -webkit-transform 500ms ease-out;
+	transition: -webkit-transform 500ms ease-out;
+	-o-transition: transform 500ms ease-out;
+	transition: transform 500ms ease-out;
+	transition: transform 500ms ease-out, -webkit-transform 500ms ease-out;
+}
+
+.light-theme .toggle-circle {
+	-webkit-transform: translateX(-15%);
+	-ms-transform: translateX(-15%);
+	transform: translateX(-15%);
+}
+
+.toggle-sun {
+	-webkit-transform-origin: center center;
+	-ms-transform-origin: center center;
+	transform-origin: center center;
+	-webkit-transition: -webkit-transform 750ms
+		cubic-bezier(0.11, 0.14, 0.29, 1.32);
+	transition: -webkit-transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
+	-o-transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
+	transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
+	transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32),
+		-webkit-transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
+}
+
+.light-theme .toggle-sun {
+	-webkit-transform: rotate(0.5turn);
+	-ms-transform: rotate(0.5turn);
+	transform: rotate(0.5turn);
+}
+
+@-webkit-keyframes pulseToLight {
+	0% {
+		-webkit-transform: scale(0);
+		transform: scale(0);
+		opacity: 0.5;
+	}
+
+	10% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+
+	75% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+
+@keyframes pulseToLight {
+	0% {
+		-webkit-transform: scale(0);
+		transform: scale(0);
+		opacity: 0.5;
+	}
+
+	10% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+
+	75% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+
+@-webkit-keyframes pulseToDark {
+	0% {
+		-webkit-transform: scale(0);
+		transform: scale(0);
+		opacity: 0.5;
+	}
+
+	10% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+
+	75% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+
+@keyframes pulseToDark {
+	0% {
+		-webkit-transform: scale(0);
+		transform: scale(0);
+		opacity: 0.5;
+	}
+
+	10% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+
+	75% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+
 * {
 	padding: 0px;
 	margin: 0px;
