--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:regular,500,700&display=swap);
-
+@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
 :root {
 	--textBlack: #050505;
 	--textWhite: #f2f5f8;
@@ -45,223 +44,6 @@
 	--backgroundContent: #ffffff;
 }
 
-#theme-toggle {
-	cursor: pointer;
-	background: 0;
-	border: 0;
-	opacity: 0.8;
-	height: 45px;
-	width: 45px;
-	border-radius: 50%;
-	position: relative;
-	isolation: isolate;
-}
-
-#theme-toggle svg {
-	fill: var(--clr-foreground);
-	height: 45px;
-	width: 45px;
-}
-
-#theme-toggle::before {
-	content: '';
-	position: absolute;
-	inset: 0;
-	background: hsla(0deg, 0%, 50%, 0.2);
-	border-radius: inherit;
-	-webkit-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	opacity: 0;
-	z-index: -1;
-}
-
-.light-theme #theme-toggle::before {
-	-webkit-animation: pulseToLight 650ms ease-out;
-	animation: pulseToLight 650ms ease-out;
-}
-
-.dark-theme #theme-toggle::before {
-	-webkit-animation: pulseToDark 650ms ease-out;
-	animation: pulseToDark 650ms ease-out;
-}
-
-#theme-toggle::after {
-	content: attr(aria-label);
-	position: absolute;
-	color: var(--clr-background);
-	background: var(--clr-foreground);
-	width: -webkit-max-content;
-	width: -moz-max-content;
-	width: max-content;
-	font-size: 1.3rem;
-	right: 0;
-	top: 95%;
-	margin: 0 auto;
-	padding: 0.5em 1em;
-	border-radius: 0.125em;
-	opacity: 0;
-	-webkit-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	-webkit-transform-origin: top;
-	-ms-transform-origin: top;
-	transform-origin: top;
-	-webkit-transition: opacity 100ms linear, -webkit-transform 0ms linear 100ms;
-	transition: opacity 100ms linear, -webkit-transform 0ms linear 100ms;
-	-o-transition: transform 0ms linear 100ms, opacity 100ms linear;
-	transition: transform 0ms linear 100ms, opacity 100ms linear;
-	transition: transform 0ms linear 100ms, opacity 100ms linear,
-		-webkit-transform 0ms linear 100ms;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-#theme-toggle:hover,
-#theme-toggle:focus {
-	outline: 0;
-	opacity: 1;
-	background: hsla(0deg, 0%, 50%, 0.15);
-}
-
-#theme-toggle:hover::after,
-#theme-toggle:focus-visible::after {
-	opacity: 0.7;
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: opacity 70ms linear, -webkit-transform 70ms linear;
-	transition: opacity 70ms linear, -webkit-transform 70ms linear;
-	-o-transition: transform 70ms linear, opacity 70ms linear;
-	transition: transform 70ms linear, opacity 70ms linear;
-	transition: transform 70ms linear, opacity 70ms linear,
-		-webkit-transform 70ms linear;
-}
-
-.toggle-circle {
-	-webkit-transition: -webkit-transform 500ms ease-out;
-	transition: -webkit-transform 500ms ease-out;
-	-o-transition: transform 500ms ease-out;
-	transition: transform 500ms ease-out;
-	transition: transform 500ms ease-out, -webkit-transform 500ms ease-out;
-}
-
-.light-theme .toggle-circle {
-	-webkit-transform: translateX(-15%);
-	-ms-transform: translateX(-15%);
-	transform: translateX(-15%);
-}
-
-.toggle-sun {
-	-webkit-transform-origin: center center;
-	-ms-transform-origin: center center;
-	transform-origin: center center;
-	-webkit-transition: -webkit-transform 750ms
-		cubic-bezier(0.11, 0.14, 0.29, 1.32);
-	transition: -webkit-transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
-	-o-transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
-	transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
-	transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32),
-		-webkit-transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
-}
-
-.light-theme .toggle-sun {
-	-webkit-transform: rotate(0.5turn);
-	-ms-transform: rotate(0.5turn);
-	transform: rotate(0.5turn);
-}
-
-@-webkit-keyframes pulseToLight {
-	0% {
-		-webkit-transform: scale(0);
-		transform: scale(0);
-		opacity: 0.5;
-	}
-
-	10% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-
-	75% {
-		opacity: 1;
-	}
-
-	100% {
-		opacity: 0;
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-}
-
-@keyframes pulseToLight {
-	0% {
-		-webkit-transform: scale(0);
-		transform: scale(0);
-		opacity: 0.5;
-	}
-
-	10% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-
-	75% {
-		opacity: 1;
-	}
-
-	100% {
-		opacity: 0;
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-}
-
-@-webkit-keyframes pulseToDark {
-	0% {
-		-webkit-transform: scale(0);
-		transform: scale(0);
-		opacity: 0.5;
-	}
-
-	10% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-
-	75% {
-		opacity: 1;
-	}
-
-	100% {
-		opacity: 0;
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-}
-
-@keyframes pulseToDark {
-	0% {
-		-webkit-transform: scale(0);
-		transform: scale(0);
-		opacity: 0.5;
-	}
-
-	10% {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-
-	75% {
-		opacity: 1;
-	}
-
-	100% {
-		opacity: 0;
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-}
-
 * {
 	padding: 0px;
 	margin: 0px;
@@ -283,25 +65,27 @@ html {
 html,
 body {
 	height: 100%;
+	background-color: var(--background);
 	min-width: 320px;
 }
 
 body {
 	color: var(--textBlack);
 	line-height: 1;
-	font-family: 'Noto Sans';
+	font-family: 'Inter';
 	font-size: 1.125rem;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	-webkit-font-smoothing: antialiased;
+	background-color: var(--background);
 	-moz-osx-font-smoothing: grayscale;
 }
 
 input,
 button,
 textarea {
-	font-family: 'Noto Sans';
+	font-family: inherit;
 	font-size: inherit;
 }
 
@@ -594,12 +378,11 @@ thead tr th:nth-child(3) {
 	padding: 0px 15px;
 	border-radius: 3px;
 	background-color: var(--gray);
-	font-family: 'Noto Sans';
+	font-family: inherit;
 }
 
 body::after {
 	content: '';
-	background-color: rgba(0, 0, 0, 0.5);
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -744,9 +527,9 @@ body::after {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	font-size: 3rem;
+	font-size: 3rem !important;
 	cursor: default;
-	font-family: 'Noto Sans';
+	font-family: inherit;
 }
 
 .grid__tense {
@@ -1205,15 +988,15 @@ body.popup-show::after {
 }
 
 .green {
-	color: var(--green);
+	color: var(--green) !important;
 }
 
 .red {
-	color: var(--red);
+	color: var(--red) !important;
 }
 
 .blue {
-	color: var(--blue);
+	color: var(--blue) !important;
 }
 
 .header__container {
