--- a/src/app.css
+++ b/src/app.css
@@ -117,7 +117,7 @@
 	transition: transform 0ms linear 100ms, opacity 100ms linear;
 	transition: transform 0ms linear 100ms, opacity 100ms linear,
 		-webkit-transform 0ms linear 100ms;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: system-ui;
 }
 
 #theme-toggle:hover,
@@ -294,7 +294,7 @@ body {
 body {
 	color: var(--textBlack);
 	line-height: 1;
-	font-family: 'Inter';
+	font-family: system-ui;
 	font-size: 1.125rem;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
@@ -307,7 +307,7 @@ body {
 input,
 button,
 textarea {
-	font-family: inherit;
+	font-family: system-ui;
 	font-size: inherit;
 }
 
@@ -600,7 +600,7 @@ thead tr th:nth-child(3) {
 	padding: 0px 15px;
 	border-radius: 3px;
 	background-color: var(--gray);
-	font-family: inherit;
+	font-family: system-ui;
 }
 
 body::after {
@@ -751,7 +751,7 @@ body::after {
 	align-items: center;
 	font-size: 3rem !important;
 	cursor: default;
-	font-family: inherit;
+	font-family: system-ui;
 }
 
 .grid__tense {
